--- a/app/src/main/res/layout/refresh_header_layout.xml
+++ b/app/src/main/res/layout/refresh_header_layout.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content">
 
         <ProgressBar
+            android:visibility="gone"
             android:id="@+id/head_progress_bar"
             android:layout_gravity="center_vertical"
             android:layout_width="20dp"
